--- a/style/main.css
+++ b/style/main.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0%;
+    padding: 1%;
+}
 body{
+    font-family: 'Inter', sans-serif;
     background-image: url(../images/background.png);
 }
+
